--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 kotlin.stdlib.default.dependency=false
 # TODO temporary workaround for Kotlin 1.8.20+ (https://jb.gg/intellij-platform-kotlin-oom)
 kotlin.incremental.useClasspathSnapshot=false
+systemProp.http.proxyHost=https\://mirrors.aliyun.com/android.googlesource.com/
+systemProp.http.proxyPort=80
