--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,8 +14,8 @@
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
+    Ai Assistant.<br>
+    <em></em>
   ]]></description>
 
     <!-- Product and plugin compatibility requirements.
@@ -31,6 +31,10 @@
                 id="test.id"
                 instance="com.szjlc.smt.ai.plugin.setting.AiSettingFactory"
         />
+
+        !-- 窗体 (IDEA 界面右侧) -->
+        <toolWindow id="Read-Book" secondary="false" anchor="right"
+                    factoryClass="com.szjlc.smt.ai.plugin.junit.ui.JunitToolWindowsFactory"/>
     </extensions>
     <actions>
 
@@ -38,6 +42,24 @@
             <add-to-group group-id="EditorPopupMenu" anchor="first"/>
             <group id="JunitAssistant" text="测试用例助手" popup="true">
                 <add-to-group group-id="AiAssistant" anchor="first"/>
+                <group id="RequiredDescription" text="需求描述" popup="true">
+                    <add-to-group group-id="JunitAssistant" anchor="after"/>
+                </group>
+                <group id="JunitDescription" text="用例描述" popup="true">
+                    <add-to-group group-id="JunitAssistant" anchor="after"/>
+                </group>
+                <group id="ReviseJunitDescription" text="修正描述" popup="true">
+                    <add-to-group group-id="JunitAssistant" anchor="after"/>
+                </group>
+                <group id="CreateJunit" text="用例生成" popup="true">
+                    <add-to-group group-id="JunitAssistant" anchor="after"/>
+                </group>
+                <group id="ReviseJunit" text="修正用例" popup="true">
+                    <add-to-group group-id="JunitAssistant" anchor="after"/>
+                </group>
+                <group id="Repeat" text="重复修正" popup="true">
+                    <add-to-group group-id="JunitAssistant" anchor="after"/>
+                </group>
             </group>
             <group id="AuditAssistant" text="代码评审助手" popup="true">
                 <add-to-group group-id="AiAssistant" anchor="after"/>
